--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "cryptohub-backend",
+  "name": "crypto-alert-backend",
   "version": "1.0.0",
   "type": "module",
+  "private": true,
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "axios": "^1.6.8",
     "@supabase/supabase-js": "^2.39.1",
     "resend": "^2.1.0"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
