--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
+  "version": 2,
   "functions": {
     "api/*.js": {
       "runtime": "nodejs18.x"
     }
   },
-  "rewrites": [
-    { "source": "/", "destination": "/public/index.html" },
-    { "source": "/dashboard", "destination": "/public/dashboard.html" }
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" }
   ]
 }
